# react-native-bip39

./: .gitmodules  CONTRIBUTING.md  README.md  package.json  react-native-bip39.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/dummy/: CMakeLists.txt
android/libs/: utf8proc-2.9.0-beta-1.aar
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bip39/: Bip39Module.java  Bip39Package.java
android/src/newarch/: Bip39Spec.java
android/src/oldarch/: Bip39Spec.java
cpp/: .clang-format  Bip39MutableBuffer.h  Bip39Utils.cpp  Bip39Utils.h  JsiBip39.cpp  JsiBip39.h  JsiBip39Api.cpp  JsiBip39Api.h  JsiHostObject.cpp  JsiHostObject.h  NativeBip39Module.cpp  NativeBip39Module.h  TestObject.cpp  TestObject.h  TypedArray.cpp  TypedArray.h  react-native-bip39.cpp  react-native-bip39.h
example/: app.json  index.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/bip39example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/Bip39Example/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/Bip39Example.xcodeproj/: project.pbxproj
example/ios/Bip39Example.xcodeproj/xcshareddata/xcschemes/: Bip39Example.xcscheme
example/ios/Bip39Example.xcworkspace/: contents.xcworkspacedata
example/ios/Bip39ExampleTests/: Bip39ExampleTests.m
example/src/: App.tsx
example/src/components/: CorrectResultItem.tsx  IncorrectResultItem.tsx  Suite.tsx  TestItem.tsx
example/src/hooks/: useRunTests.ts  useTestList.ts
example/src/navigators/children/Entry/: Entry.tsx
example/src/navigators/children/TestingScreen/: TestingScreen.tsx
example/src/navigators/children/benchmarks/: Benchmarks.tsx
example/src/testing/: MochaSetup.ts  TestList.ts
example/src/testing/Tests/: DefaultWordlist.ts  InvalidEntropy.ts  Utf8Passwords.ts  ValidateMnemonic.ts  Vectors.ts  VectorsLong.ts  VectorsShort.ts  wordlist.ts
ios/: Bip39.h  Bip39.mm  Bip39OnLoad.mm
ios/Bip39.xcodeproj/: project.pbxproj
src/: ModuleNotFoundError.ts  NativeBip39.ts  index copy.tsx  index.tsx  types.ts
